# SpaceShipNcurses

./: .gitignore  CMakeLists.txt
src/: space.cc
